(my third commit)

--- a/week-3/practice2.ipynb
+++ b/week-3/practice2.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a85374a6-c7bc-49ec-9c8c-8455c1f5c30d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "#Input from user\n",
@@ -13,8 +17,11 @@
     "# Constant value for the speed of light in m/s\n",
     "c = 299792458\n",
     "\n",
+    "#Calculating energy using Einstein's equation\n",
+    "energy = m * c ** 2\n",
+    "\n",
     "# Calculating the result\n",
-    "print(f\"The energy equivalent to {m} kg of mass is {energy} joules.\")"
+    "print(f\"The energy equivalent to {m} kg of mass is {energy} joules.\")\n"
    ]
   }
  ],
