--- a/week-3/practice4.ipynb
+++ b/week-3/practice4.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4851cad8-e797-46c8-951a-82b58345a5fb",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "tuple = (\"Ekiti\",750,'Oshogbo',250,\"Akure\",500)\n",
@@ -26,14 +30,18 @@
     "print(s_tuple * 3)\n",
     "\n",
     "#prints concatenated tuples\n",
-    "print(tuple + s_tuples)"
+    "print(tuple + s_tuple)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "cc2920b8-d02b-4748-b101-6daab840b904",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": []
   }
