--- a/week-3/practice5.ipynb
+++ b/week-3/practice5.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c9a9e567-070a-4931-95fa-15e64056df52",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "#Returns false as game_1 is not equal to game_2\n",
@@ -12,7 +16,7 @@
     "game_2 = 4\n",
     "print(bool(game_1 == game_2))\n",
     "#or\n",
-    "print game_1 == game_2)\n",
+    "print (game_1 == game_2)\n",
     "\n",
     "#Returns false as val in none\n",
     "val = None\n",
@@ -23,7 +27,7 @@
     "print(bool(num))\n",
     "\n",
     "#Returns true as age is boolean\n",
-    "age = ture\n",
+    "age = true\n",
     "print(bool(age))"
    ]
   }
