--- a/week-3/practice7.ipynb
+++ b/week-3/practice7.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9fbbdae1-4a3f-4235-9018-a637fc1eb933",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "#Convert to foalt\n",
@@ -22,7 +26,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d8327611-4da1-4475-9e73-0f186111a563",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "grade = int(97)\n",
@@ -38,11 +46,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "23840418-a8e3-4ef5-a882-b2ed71076b31",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
-   "source": [
-    "ptin"
-   ]
+   "source": []
   }
  ],
  "metadata": {
