--- a/week-3/practice3.ipynb
+++ b/week-3/practice3.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "375183c8-d1b5-4f33-b264-49d76c3a8e13",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "list = [ 'Anaconda',786,2.23, 'Jupyter',70.2]\n",
@@ -14,7 +18,7 @@
     "print(list[0])         #Prints first element of the list\n",
     "print(list[1:3])       #prints element starting from 2nd till 3rd\n",
     "print(list[2:])        '''Prints element starting form 3rd element'''\n",
-    "print(Shartlist * 2)   #Prints list two times\n",
+    "print(shortlist * 2)   #Prints list two times\n",
     "print(list + shortlist) #prints concatenated lists"
    ]
   }
