--- a/week-3/project2.ipynb
+++ b/week-3/project2.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1ba5e3d9-7f8b-404e-9ff1-f000a2506b6c",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -38,7 +42,7 @@
     "    print(\"and\")\n",
     "    quad(a, quadratic_b, quadratic_c)#solves the quadratic part of the equation\n",
     "\n",
-    "   p1 = 2*c*3 - 9*b*c*d + 27*a*d2 + 27*b*2*e - 72*a*c*e\n",
+    "    p1 = 2*c*3 - 9*b*c*d + 27*a*d2 + 27*b*2*e - 72*a*c*e\n",
     "    p2 = p1 + math.sqrt(-4*(c*2 - 3*b*d + 12*a*e)3 + p1*2)\n",
     "    p3 = (c*2 - 3*b*d + 12*a*e) / (3*a3 * math.sqrt(p2*2)) + 3 * math.sqrt(p2/2) / (3*a)\n",
     "    p4 = (math.sqrt(b*2) / (4*a*2)) - (2*c / (3*a)) + p3\n",
