--- a/week-3/practice4.ipynb
+++ b/week-3/practice4.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4851cad8-e797-46c8-951a-82b58345a5fb",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Ekiti', 750, 'Oshogbo', 250, 'Akure', 500)\n",
+      "500\n",
+      "('Oshogbo', 250)\n",
+      "(250, 'Akure', 500)\n",
+      "('Abeokuta', 300, 'Ogbomoso', 'Abeokuta', 300, 'Ogbomoso', 'Abeokuta', 300, 'Ogbomoso')\n",
+      "('Ekiti', 750, 'Oshogbo', 250, 'Akure', 500, 'Abeokuta', 300, 'Ogbomoso')\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "tuple = (\"Ekiti\",750,'Oshogbo',250,\"Akure\",500)\n",
     "s_tuple = (\"Abeokuta\",300,\"Ogbomoso\")\n",
@@ -37,11 +46,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cc2920b8-d02b-4748-b101-6daab840b904",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -53,7 +58,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
