--- a/week-3/practice5.ipynb
+++ b/week-3/practice5.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c9a9e567-070a-4931-95fa-15e64056df52",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "#Returns false as game_1 is not equal to game_2\n",
     "game_1 = 2\n",
@@ -27,8 +34,8 @@
     "print(bool(num))\n",
     "\n",
     "#Returns true as age is boolean\n",
-    "age = true\n",
-    "print(bool(age))"
+    "#age = true\n",
+    "#print(bool(age))"
    ]
   }
  ],
@@ -39,7 +46,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
