--- a/week-3/practice_1.ipynb
+++ b/week-3/practice_1.ipynb
@@ -2,16 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0158a842-2024-44b9-bedf-870e13bc5718",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your state of origine is:  general\n",
+      "the first character is:  g\n",
+      "the characters starting from 3rd to 5th are:  ner\n",
+      "the string starting from 3rd character is:  neral\n",
+      "State of origin two times  generalgeneral\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "str = input(\"Enter state of origin: \")\n",
     "\n",
     "print(\"Your state of origine is: \",str)\n",
     "print(\"the first character is: \",str[0])\n",
-    "print(\"the characters starting from 3rd to 5th are: \"str[2:5])\n",
+    "print(\"the characters starting from 3rd to 5th are: \",str[2:5])\n",
     "print(\"the string starting from 3rd character is: \",str[2:])\n",
     "print(\"State of origin two times \",str * 2)\n"
    ]
@@ -168,7 +191,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
