--- a/week-3/project2.ipynb
+++ b/week-3/project2.ipynb
@@ -2,88 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1ba5e3d9-7f8b-404e-9ff1-f000a2506b6c",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The complex roots of the equation are (-0.6666666666666666+0.47140452079103173j) and (-0.6666666666666666-0.47140452079103173j)\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "import math\n",
     "import cmath\n",
     "\n",
-    "def quad(a,b,c):\n",
-    "    determinant = b**2 - 4*a*c #computes the determinant\n",
-    "    if determinant == 0:\n",
-    "        print(f\"The Root of the equation is{ (-b + math.sqrt(determinant)) / (2*a) }\")\n",
-    "    elif determinant > 0:\n",
-    "        print(f\"The roots of the equation are {(-b + -math.sqrt(determinant)) / (2*a)} and {(-b + math.sqrt(determinant)) / (2*a)}\")\n",
+    "def quad(a, b, c):\n",
+    "    determinant = b**2 - 4*a*c\n",
+    "    if determinant >= 0:\n",
+    "        root1 = (-b + math.sqrt(determinant)) / (2*a)\n",
+    "        root2 = (-b - math.sqrt(determinant)) / (2*a)\n",
+    "        if determinant == 0:\n",
+    "            print(f\"The root of the equation is {root1}\")\n",
+    "        else:\n",
+    "            print(f\"The roots of the equation are {root1} and {root2}\")\n",
     "    else:\n",
-    "        print(f\"The complex roots of the equation are {(-b - cmath.sqrt(determinant)) / (2*a)} and {(-b + cmath.sqrt(determinant)) / (2*a)}\")\n",
+    "        root1 = (-b + cmath.sqrt(determinant)) / (2*a)\n",
+    "        root2 = (-b - cmath.sqrt(determinant)) / (2*a)\n",
+    "        print(f\"The complex roots of the equation are {root1} and {root2}\")\n",
     "\n",
     "def cubic(a, b, c, d):\n",
-    "    y_coefficient = (c - ((b**2) / (3*a))) / a \n",
-    "    constant = (d + ((2*(b*3)) / (27(a**2))) - ((b*c) / (3*a))) / a #computes coeffecients of y^2 and c to use Cardano's method\n",
+    "    f = ((3*c/a) - (b**2/a**2))/3\n",
+    "    g = ((2*(b**3)/a**3) - (9*b*c/a**2) + (27*d/a))/27\n",
+    "    h = g**2/4 + f**3/27\n",
     "\n",
-    "    print(f\"The depressed cubic equation is y^3 + {y_coefficient}y + {constant}\")\n",
-    "\n",
-    "    t = (constant + math.sqrt( (constant*2) + (4((y_coefficient**3)/27)) ) ) / 2\n",
-    "    s = (-constant + t)**(1/3)\n",
-    "    t = t**(1/3)\n",
-    "    \n",
-    "    real_root = (s - t) - (b/(3*a))#computes the real root  \n",
-    "    \n",
-    "    quadratic_b = (real_root * a) + b #gets the coeffecient of x of the quadratic equation gotten by dividing the cubic equation by the real root\n",
-    "    quadratic_c = ( (real_root*2) a ) +(b * real_root) + c\n",
-    "\n",
-    "    print(f\"The real root is {real_root}\")\n",
-    "    print(\"and\")\n",
-    "    quad(a, quadratic_b, quadratic_c)#solves the quadratic part of the equation\n",
-    "\n",
-    "    p1 = 2*c*3 - 9*b*c*d + 27*a*d2 + 27*b*2*e - 72*a*c*e\n",
-    "    p2 = p1 + math.sqrt(-4*(c*2 - 3*b*d + 12*a*e)3 + p1*2)\n",
-    "    p3 = (c*2 - 3*b*d + 12*a*e) / (3*a3 * math.sqrt(p2*2)) + 3 * math.sqrt(p2/2) / (3*a)\n",
-    "    p4 = (math.sqrt(b*2) / (4*a*2)) - (2*c / (3*a)) + p3\n",
-    "    p5 = (b*2 / (2*a*2)) - (4*c / (3*a)) - p3\n",
-    "    p6 = (-b*3 / a3) + (4*b*c / a*2) - (8*d / a) / (4*p4)\n",
-    "\n",
-    "\n",
-    "    x1 = (-b / (4*a)) - (p4 / 2) - math.sqrt(p5 - p6) / 2\n",
-    "    x2 = (-b / (4*a)) - (p4 / 2) + math.sqrt(p5 - p6) / 2\n",
-    "    x3 = (-b / (4*a)) + (p4 / 2) - math.sqrt(p5 + p6) / 2\n",
-    "    x4 = (-b / (4*a)) + (p4 / 2) + math.sqrt(p5 + p6) / 2\n",
-    "\n",
-    "    print(\"x1 =\", x1)\n",
-    "    print(\"x2 =\", x2)\n",
-    "    print(\"x3 =\", x3)\n",
-    "    print(\"x4 =\", x4)\n",
+    "    if h > 0:\n",
+    "        R = -(g/2) + math.sqrt(h)\n",
+    "        S = R**(1/3)\n",
+    "        T = -(g/2) - math.sqrt(h)\n",
+    "        U = T**(1/3)\n",
+    "        root1 = (S + U) - (b/(3*a))\n",
+    "        print(f\"The real root is {root1}\")\n",
+    "        quad(a, b + a*root1, c + b*root1 + a*root1**2)\n",
+    "    elif f == 0 and g == 0 and h == 0:\n",
+    "        root = -(d/a)**(1/3)\n",
+    "        print(f\"All roots are real and equal: {root}\")\n",
+    "    else:\n",
+    "        i = math.sqrt(g**2/4 - h)\n",
+    "        j = i**(1/3)\n",
+    "        k = math.acos(-g/(2*i))\n",
+    "        L = -j\n",
+    "        M = math.cos(k/3)\n",
+    "        N = math.sqrt(3) * math.sin(k/3)\n",
+    "        P = -(b/(3*a))\n",
+    "        root1 = 2*j*math.cos(k/3) - (b/(3*a))\n",
+    "        root2 = L*(M + N) + P\n",
+    "        root3 = L*(M - N) + P\n",
+    "        print(f\"The real roots are {root1}, {root2}, and {root3}\")\n",
     "\n",
     "def main():\n",
-    "    response = int(input(\"What's the degree of the polynomial you wish to solve(2,3 or 4)\"))\n",
+    "    response = int(input(\"Enter the degree of the polynomial (2 or 3): \"))\n",
     "    \n",
-    "    if response < 2 or response > 4: #calculator only supports quadratic, cubic and quartic equations\n",
-    "        print(\"Unsuported calculation\")\n",
-    "        main()\n",
-    "    \n",
-    "    a = float(input(\"Enter value of a\"))\n",
-    "    b = float(input(\"Enter value of b\"))\n",
-    "    c = float(input(\"Enter value of c\"))\n",
-    "    \n",
-    "   \n",
-    "    if response == 2:#calls the function to calculate a quadratic formula\n",
-    "        quad(a,b,c)\n",
+    "    if response == 2:\n",
+    "        a = float(input(\"Enter value of a: \"))\n",
+    "        b = float(input(\"Enter value of b: \"))\n",
+    "        c = float(input(\"Enter value of c: \"))\n",
+    "        quad(a, b, c)\n",
+    "    elif response == 3:\n",
+    "        a = float(input(\"Enter value of a: \"))\n",
+    "        b = float(input(\"Enter value of b: \"))\n",
+    "        c = float(input(\"Enter value of c: \"))\n",
+    "        d = float(input(\"Enter value of d: \"))\n",
+    "        cubic(a, b, c, d)\n",
     "    else:\n",
-    "        d = float(input(\"Enter Value of d\"))\n",
-    "        if response == 3:\n",
-    "            cubic(a,b,c,d)\n",
-    "            \n",
-    "        else:\n",
-    "            e = float(input(\"Enter value of e\"))\n",
-    "            quartic(a,b,c,d,e)\n",
+    "        print(\"Unsupported calculation\")\n",
     "\n",
-    "main()"
+    "main()\n"
    ]
   }
  ],
@@ -94,7 +89,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
